# operatic

./: .editorconfig  CMakeLists.txt  README.md  dbopl.cpp  dbopl.h  operatic.cpp
